# gaudioplayer

./: .gitignore  CMakeLists.txt  LICENSE
headers/gangod/: filemgmt.h  graphics.h  reciver.h  server.h
jsons/: interface.json
src/: main.cpp
src/gangod/: graphics.cpp  reciver.cpp  server.cpp
